# dse

./: .travis.yml  LICENSE.md  README  README.md  make.sh  projargs.sh  run.sh  setpaths.sh  setup.sh
GenerateTestScript/: .gitignore  build.xml
GenerateTestScript/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
danalyzer/: README  build.xml
danalyzer/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
dandebug/: .gitignore
dandebug/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
danhelper/: .gitignore  CMakeLists.txt
danhelper/src/: CMakeLists.txt  danhelper.cpp  java_crw.c  string_lookup.hpp
danlauncher/: README  build.xml
danlauncher/nbproject/: build-impl.xml  (+2 more)
dansolver/: build.xml
scripts/: README.md  make.sh  projinfo.sh  run.sh  runorig.sh  setpaths.sh  startup.sh
src/: README.md
src/danpatch/src/: CMakeLists.txt  danalyzer_executor_NativeCode.cpp
test/: README.md  base_check.sh  make_tests.sh  run_tests.sh
tests/: .gitignore  README  base_check.sh  make_tests.sh  run_array_from_ref.sh  run_array_maximize.sh  run_basic_array.sh  run_buffered_image_test.sh  run_byte_test.sh  run_constructor_test.sh  run_cwe129.sh  run_cwe606.sh  run_double_from_ref.sh  run_multiarray_from_ref.sh  run_multiarray_nonsquare.sh  run_multiarray_square.sh  run_nano.sh  run_object.sh  run_paper.sh  run_symbolic_index_array.sh  run_symbolic_string_equals.sh  run_symbolic_string_length.sh  run_tests.sh  run_thread_arrays_test.sh  run_thread_test.sh  testlist.txt
(+232 files in other folders)
